syntax = "proto3";

option csharp_namespace = "GSTORE_Server";

package gstoreservices;

service StorageServerServices {
	rpc Read (ReadRequest) returns (ReadReply);
	rpc Write (WriteRequest) returns (WriteReply);
}

message ReadRequest {
	string key = 1;
}

message ReadReply {
	string value = 1;
}

message WriteRequest {
	string key = 1;
	string value = 2;
}

message WriteReply {
	bool success = 1;
}